rdm-stack/apps/visitor-web/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdm-app-ingress
  namespace: rdm-digital-hub
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.visitarealdelmonte.online
        - visitarealdelmonte.online
      secretName: rdm-tls
  rules:
    - host: www.visitarealdelmonte.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rdm-app-service
                port:
                  number: 80
    - host: visitarealdelmonte.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rdm-app-service
                port:
                  number: 80
